refactor: update video compression process
